@@ -266,9 +266,9 @@
             <version>1.15</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <version>2.8.0</version>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.4.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -491,7 +491,7 @@ with Springfox 3.
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.22</version>
+            <version>8.0.23</version>
         </dependency>
         <dependency>
             <groupId>org.scream3r</groupId>
