@@ -67,6 +67,7 @@
 * The env.properties file is now created on startup if it does not exist, it will be created with all properties commented out
 * Mango will now fail to start if the env.properties file has POSIX "others" read/write permissions. You must manually adjust the permissions on your env.properties file so it is not readable or writable by "others".
 * $MA_HOME/overrides/classes and $MA_HOME/overrides/properties are no longer added to the classpath via the default start up scripts.
+* Change MySQL connection pool library from dbcp2 to HikariCP
 * Support OAuth2 and OpenID Connect authentication via Spring Security (configurable via env.properties)
 * System login events are now instantaneous events and no longer "return to normal" on logout
 
